<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.divum.auto_biography.Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark" />
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/view">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_id"
                android:layout_below="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"

                android:id="@+id/email_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_view">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/password"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/confirm_password" />
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >
            <com.andexert.library.RippleView
                android:id="@+id/ripple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/password_view"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    app:mrl_rippleRoundedCorners="10dp"
                    app:mrl_rippleHover="true"
                    android:background="#4256ae"
                    android:minHeight="40dp"
                    android:minWidth="150dp"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    />
            </com.andexert.library.RippleView>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/ripple2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:minHeight="40dp"
                    android:background="#4256ae"
                    android:minWidth="150dp"
                    android:text="Cancel"
                    android:textColor="@android:color/white"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
