<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark" />
        </android.support.design.widget.AppBarLayout>


     <!--   <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="195dp"
            android:scaleType="centerCrop"
            android:src="@drawable/cinema2"/> -->

        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            />
        <com.daimajia.slider.library.Indicators.PagerIndicator
            android:id="@+id/custom_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:paddingTop="30dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:id="@+id/view">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_id"
            android:layout_below="@+id/view"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:id="@+id/email_id" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"

        android:paddingRight="30dp"
        android:id="@+id/password_view">
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/password"/>

    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >
        <com.andexert.library.RippleView
            android:id="@+id/ripple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            rv_centered="true">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_view"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            app:mrl_rippleColor="#4256ae"
            app:mrl_rippleRoundedCorners="10dp"
            app:mrl_rippleHover="true"
            android:background="#4256ae"
            android:minHeight="40dp"
            android:minWidth="150dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
             />
        </com.andexert.library.RippleView>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/ripple2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:minHeight="40dp"
            android:background="#4256ae"
            android:minWidth="150dp"
            android:layout_gravity="center"
            android:text="Registration"
            android:textColor="@android:color/white"
            />
        </com.balysv.materialripple.MaterialRippleLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="100dp"
        android:weightSum="2"
        android:orientation="horizontal"
        >
        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>